<resources>
    <string name="app_name">Vacation Planner</string>
    <string name="delete_vacation">Delete Vacation</string>
    <string name="add">ADD</string>
    <string name="my_vacations">My Vacations</string>
    <string name="TODO">FIXME</string>
    <string name="vacation_details">Vacation Details</string>
    <string name="title">Title: </string>
    <string name="vacation_name">vacation name</string>
    <string name="hotel">Hotel: </string>
    <string name="accommodations">accommodations</string>
    <string name="start_date">Start Date: </string>
    <string name="st_date">start date</string>
    <string name="end_date">End date: </string>
    <string name="e_date">end date</string>
    <string name="time_to_unwind">Time To Unwind!</string>
    <string name="save">Save</string>
    <string name="no_vacations">No Vacations</string>
    <string name="no_excursions">No Excursions</string>
    <string name="no_excursion_id">No Excursion ID</string>
    <string name="set_alerts">Set Alerts</string>
    <string name="share_vacation">Share Vacation</string>
    <string name="excursion_name">excursion name</string>
    <string name="date">Date</string>
    <string name="date_of_excursion">date of excursion</string>
    <string name="excursions">Excursions</string>
    <string name="delete_excursion">Delete Excursion</string>
    <string name="excursion_details">Excursion Details</string>
    <string name="choose_vacation_associated_with_excursion">Choose vacation associated with this excursion</string>
    <string name="search_vacations">Search vacations</string>
    <string name="searched_vacation_report">Searched Vacation Report</string>
    <string name="home">Home</string>
    <string name="koala_vacation_planner">Koala Vacation Planner</string>

</resources>