<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.VacationDetails">

    <TextView
        android:id="@+id/textview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="45dp"
        android:text="@string/vacation_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="409dp"
        android:layout_height="340dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview6"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/vacationtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/vacation_name"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel" />

                <EditText
                    android:id="@+id/vacationhotel"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/accommodations"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date" />

                <EditText
                    android:id="@+id/vacationstartdate"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/st_date"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date" />

                <EditText
                    android:id="@+id/vacationenddate"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/e_date"
                    android:inputType="date" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        app:layout_constraintBottom_toTopOf="@id/excursionRecyclerview"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/excursionRecyclerview"
        android:layout_width="409dp"
        android:layout_height="370dp"
        android:background="#eaddfc"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/excursionFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/outline_add_24"
        tools:layout_editor_absoluteX="338dp"
        tools:layout_editor_absoluteY="850dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excursions"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="554dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/excursionRecyclerview"/>
</androidx.constraintlayout.widget.ConstraintLayout>