<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ExcursionDetails">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="409dp"
        android:layout_height="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/excursiontitle"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/excursion_name"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

                <EditText
                    android:id="@+id/excursiondate"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/date_of_excursion"
                    android:inputType="text" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveButtonEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>